syntax = "proto3";
import "Membership.proto";

package ecliptix.proto.membership;
option csharp_namespace = "Ecliptix.Protobuf.Membership";

enum VerificationPurpose {
  REGISTRATION = 0;
  LOGIN = 1;
  PASSWORD_RECOVERY = 2;
}

enum VerificationResult {
  SUCCEEDED = 0;
  INVALID_PHONE = 1;
  INVALID_OTP = 2;
  EXPIRED = 3;
}

message InitiateVerificationRequest {
  bytes phone_number_identifier = 1;
  bytes app_device_identifier = 2;
  VerificationPurpose purpose = 3;
}

message InitiateResendOtpRequest {
  bytes session_identifier = 1;
}

message ResendOtpResponse {
  VerificationResult result = 1;
  bytes session_identifier = 2;
  VerificationPurpose purpose = 3;
}

message VerificationCountdownUpdate {
  uint64 seconds_remaining = 1;
  bytes session_identifier = 2;
  bool already_verified = 3;
}

message InitiateVerificationResponse {
  VerificationResult result = 1;
  string message = 2;
  bytes session_identifier = 3;
  VerificationPurpose purpose = 4;
}

message VerifyCodeRequest {
  bytes app_device_identifier = 1;
  string code = 2;
  VerificationPurpose purpose = 3;
}

message VerifyCodeResponse {
  VerificationResult result = 1;
  optional string message = 2;
  optional Membership membership = 3;
}

message ValidatePhoneNumberRequest {
  string phone_number = 1;
}

message ValidatePhoneNumberResponse {
  bytes phone_number_identifier = 1;
  VerificationResult result = 2;
  optional string message = 3;
}
